bugfix: PC version small fix

--- a/blocks/editForm/editForm.css
+++ b/blocks/editForm/editForm.css
@@ -38,6 +38,6 @@
         margin-left: -215px;
         height: 370px;
         width: 430px;
-        z-index: 3;
+        position: fixed;
     }
 }
